--- a/styles.css
+++ b/styles.css
@@ -53,6 +53,7 @@ h1 {
     background-color: brown;
     display: flex;
     justify-content: space-around;
+    padding-top: 60px;
 }
 
 /*container para o grid*/
@@ -69,6 +70,7 @@ h1 {
     height: auto;
     background-color: aqua;
     display: block;
+    justify-content: center;
 }
 
 .banner {
@@ -84,8 +86,126 @@ h1 {
 /*seção dos cards*/
 .posts {
     max-width: 744px;
-    height: 450px;
+    height: auto;
     background-color: burlywood;
+}
+
+.h1-posts {
+    width: 744px;
+    height: 56px;
+    background-color: #02A28F;
+    border-radius: 8px;
+    display: flex;
+    justify-content: space-between;
+    text-align: left;
+}
+
+.h1-posts h1 {
+    font-family: 'Montserrat';
+    font-size: 20px;
+    font-weight: 700;
+    line-height: 24.38px;
+    text-align: left;
+    text-underline-position: from-font;
+    text-decoration-skip-ink: none;
+
+}
+
+.container-id-card{  /*"container-cards"*/
+    display: flex;
+    flex-wrap: wrap; /* Permite que os cards "quebrem" para uma nova linha */
+    gap: 20px; /* Espaçamento entre os cards */
+    justify-content: space-between; /* Espaça os cards uniformemente */
+}
+
+.id-card {
+    display: flex;
+    flex-wrap: wrap; /* Garante a quebra dos itens filhos para nova linha */
+    gap: 20px; /* Espaçamento entre os itens filhos */
+    width: 100%; /* Largura total do contêiner pai */
+}
+
+/*confg do card*/
+#card { /*card*/
+    flex: 0 0 calc(50% - 20px); /* Cada card ocupa 50% da largura menos o gap */
+    height: 400px; /* Altura fixa dos cards (ajustável) */
+    background-color: #ffffffeb;
+    border-radius: 15px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.092);
+}
+
+.image {
+    width: 100%;
+    height: 50%;
+}
+
+.container-card-text {
+    width: 100%;
+    height: 50%;
+    gap: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.text-information {
+    width: 95%;
+    height: 105%;
+    gap: 15px;
+    align-items: baseline;
+    font-family: 'Montserrat';
+}
+
+#card-h2{
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 17.07px;
+    height: auto;
+    color: #02A28F;
+    gap: 0;
+    padding: 0;
+    margin: 0;
+    margin-top: 2%;
+    margin-bottom: 2%;
+}
+
+#card-h1 {
+    font-size: 20px;
+    font-weight: 700;
+    line-height: 22px;
+    height: auto;
+    color: #000000;
+    gap: 0;
+    padding: 0;
+    margin: 0;
+    margin-bottom: 2%;
+    padding-bottom: 2%;
+}
+
+#card-h4 {
+    font-size: 14px;
+    font-weight: 700;
+    line-height: 17.07px;
+    height: auto;
+    color: #616161;
+    gap: 0;
+    padding: 0;
+    margin: 0;
+}
+
+span {
+    font-size: 14px;
+    font-weight: 500; 
+    color: #616161;
+    gap: 0;
+    padding: 0;
+    margin: 0;
+}
+
+#card-p {
+    font-size: 14px;
+    line-height: 17.07px;
+    height: auto;
 }
 
 /*aside*/
