--- a/styles.css
+++ b/styles.css
@@ -636,7 +636,7 @@ footer {
     }
 
     .centraliza-cat {
-        width: 348px;
+        width: 100%;
         height: auto;
         display: flex;
         justify-content: center;
