--- a/styles.css
+++ b/styles.css
@@ -631,7 +631,11 @@ footer {
         justify-content: center;
     }
 
-    .pop, #id-pop {
+    .pop {
+        width: 320px;
+    }
+
+    #id-pop {
         width: 348px;
     }
 
