--- a/styles.css
+++ b/styles.css
@@ -92,6 +92,7 @@ h1 {
     padding: 0px;
     margin: 0px;
 }
+
 /*seção dos cards*/
 .posts {
     max-width: 744px;
@@ -525,6 +526,10 @@ footer {
 }
 
 @media (max-width: 800px){
+
+    .containerflex-do-grid {
+        padding-top: 5%;
+    }
     
     header>h1 {
         font-size: 2rem;
@@ -609,6 +614,10 @@ footer {
         padding-top: 5%;
     }
 
+    .image-bner img {
+        width: 100%;
+    }
+
     .id-card {
         width: 100%;
     }
@@ -632,11 +641,13 @@ footer {
     }
 
     .pop {
-        width: 320px;
+        width: 330px;
+        box-shadow: 0px 10px 10px 0px #0000001A;
     }
 
     #id-pop {
         width: 348px;
+        margin: 0;
     }
 
     .centraliza-cat {
@@ -652,6 +663,5 @@ footer {
 
     #categoria {
         max-width: 348px;
-
     }
 }
