--- a/public/styles.css
+++ b/public/styles.css
@@ -16,7 +16,7 @@ body{
     justify-content: center;
 }
 
-header {
+header nav {
     width: 100%;
     height: 70px;
     background-color: #02A28F;
