--- a/public/styles.css
+++ b/public/styles.css
@@ -116,18 +116,18 @@ h1 {
 
 .h1-posts h1 {
     font-family: 'Montserrat';
-    font-size: 20px;
+    font-size: 1.5rem;/*20px;*/
     font-weight: 700;
     line-height: 24.38px;
     text-align: left;
     padding: 0;
-    margin-left: 24px;
+    margin-left: 3%;/*24px;*/
 }
 
 .h1-posts p a {
     color: #FFFFFF;
     font-family: 'Montserrat';
-    font-size: 14px;
+    font-size: 0.9rem;/* 14px;*/
     font-weight: 500;
     line-height: 17.07px;
     text-align: left;
@@ -135,11 +135,11 @@ h1 {
     text-decoration-style: solid;
     text-underline-position: from-font;
     text-decoration-skip-ink: none;
-    width: 68px;
+    width: 80px;
     height: 17px;
     gap: 0px;
     opacity: 0px;
-    margin-right: 24px;
+    margin-right: 1.5rem;/*24px;*/
 }
 
 .container-id-card{  /*"container-cards"*/
@@ -194,7 +194,7 @@ h1 {
 }
 
 #card-h2{
-    font-size: 14px;
+    font-size: 0.9rem;/*14px;*/
     font-weight: 400;
     line-height: 17.07px;
     height: auto;
@@ -207,7 +207,7 @@ h1 {
 }
 
 #card-h1 {
-    font-size: 20px;
+    font-size: 1.2rem;/*20px;*/
     font-weight: 700;
     line-height: 22px;
     height: auto;
@@ -220,7 +220,7 @@ h1 {
 }
 
 #card-h4 {
-    font-size: 14px;
+    font-size: 0.9rem;/*14px;*/
     font-weight: 700;
     line-height: 17.07px;
     height: auto;
@@ -231,7 +231,7 @@ h1 {
 }
 
 span {
-    font-size: 14px;
+    font-size: 0.9rem;/*14px;*/
     font-weight: 500; 
     color: #616161;
     gap: 0;
@@ -240,7 +240,7 @@ span {
 }
 
 #card-p {
-    font-size: 14px;
+    font-size: 0.9rem;/*14px;*/
     line-height: 17.07px;
     height: auto;
 }
@@ -249,7 +249,7 @@ span {
 .flexgrid-do-aside {
     display: flex;          /* Flexbox para layout */
     flex-direction: column; /* Empilha os itens em coluna */
-    gap: 20px;              /* Espaçamento entre os itens */
+    gap: 1.2rem;/*20px;*/              /* Espaçamento entre os itens */
     height: auto;
     width: 361px;           /* Garante o uso total da largura disponível */
     
@@ -258,7 +258,7 @@ span {
 .classflex-do-aisde {
     display: grid;          /* Ativa o layout de grid */
     grid-template-rows: auto auto; /* Define duas linhas automáticas para empilhar os elementos */
-    gap: 20px;              /* Espaçamento entre as linhas */
+    gap: 1.2rem;/*20px;*/              /* Espaçamento entre as linhas */
     width: 100%;            /* Garante que o aside ocupe toda a largura permitida */
 }
 
@@ -284,7 +284,7 @@ span {
 
 .pop h3 {
     font-family: 'Montserrat';
-    font-size: 20px;
+    font-size: 1.2rem;/*20px;*/
     font-weight: 700;
     line-height: 24.38px;
     text-align: left;
@@ -300,7 +300,7 @@ span {
     width: 99%;
     height: auto;
     flex-wrap: wrap;
-    gap: 20px;
+    gap: 1.2rem; /*20px;*/
     border-radius: 10px 0px 0px 0px;
     opacity: 0px;
     margin-bottom: 7%;
@@ -311,7 +311,7 @@ span {
     justify-content: space-between;
     width: 360px;
     height: 96px;
-    gap: 20px;
+    gap: 1.2rem; /*20px;*/
     border-radius: 10px;
     opacity: 0px;
     background: #FFFFFF;
@@ -323,8 +323,8 @@ span {
 .image-pop {
     width: 132px;
     height: 70px;
-    top: 201px;
-    left: 937px;
+    /*top: 201px;*/
+    /*left: 937px;*/
     gap: 0px;
     border-radius: 10px;
     opacity: 0px;
@@ -356,7 +356,7 @@ span {
     gap: 0px;
     opacity: 0px;
     font-family: 'Montserrat';
-    font-size: 14px;
+    font-size: 0.9rem; /*14px;*/
     font-weight: 700;
     line-height: 17.07px;
     text-align: left;
@@ -374,7 +374,7 @@ span {
 
 #h2-pop {
     font-family: 'Montserrat';
-    font-size: 12px;
+    font-size: 0.8rem;/*12px;*/
     font-weight: 500;
     line-height: 14.63px;
     color: #616161;
@@ -387,7 +387,7 @@ span {
     justify-content: left;
     width: 361px;
     height: 184px;
-    gap: 12px;
+    gap: 0.8rem;/*12px;*/
     margin: 0;
     padding: 0;
     text-align: left;
@@ -411,8 +411,8 @@ span {
 }
 
 .cat>h3 {
-    font-family: Montserrat;
-    font-size: 20px;
+    font-family: "Montserrat";
+    font-size: 1.2rem; /*20px;*/
     font-weight: 700;
     line-height: 24.38px;
     text-align: left;
@@ -427,18 +427,17 @@ span {
     width: 360px;
     height: 20px;
     gap: 0px;
-    width: Fixed (360px)px;
     opacity: 0px;
     display: flex;
     justify-content: space-between;
     align-items: center;
     letter-spacing: 1px;
-    gap: 20px;
+    gap: 1.2rem; /*20px;*/
 }
 
 #h1-cat {
     font-family: 'Montserrat';
-    font-size: 16px;
+    font-size: 1rem; /*16px;*/
     font-weight: 600;
     line-height: 19.5px;
     text-align: left;
@@ -455,9 +454,7 @@ span {
 }
 
 footer {
-    
     height: 48px;
-   
     gap: 0px;
     display: flex;
     justify-content: center;
@@ -468,7 +465,7 @@ footer {
 
 #p-footer {
     font-family: 'Montserrat';
-    font-size: 14px;
+    font-size: 0.9rem; /*14px;*/
     font-weight: 600;
     line-height: 17.07px;
     text-align: left;
@@ -487,11 +484,11 @@ footer {
     .container-grid {
         grid-template-columns: auto; /* Apenas 1 coluna */
         grid-template-rows: auto; /* Linhas ajustadas automaticamente */
-        gap: 10px; /* Espaçamento entre os itens */
+        gap: 0.6rem; /* 10px;*/ /* Espaçamento entre os itens */
     }
 
     .id-card {
-        gap: 24px;
+        gap: 1.5rem;/*24px;*/
     }
 
     /*grid do aside*/
@@ -502,10 +499,7 @@ footer {
     .classflex-do-aisde {
         grid-template-columns: auto;
         grid-template-rows: auto; /* Linhas ajustadas automaticamente */
-        gap: 10px; /* Espaçamento entre os itens */
-    }
-
-    .container-aside {
+        gap: 0.6rem; /* 10px;*/ /* Espaçamento entre os itens */
     }
 
     .posts-Pop {
@@ -607,8 +601,27 @@ footer {
 }
 
 @media (max-width: 450px){
-
     
+    header {
+        margin: 0;
+        padding: 0;
+    }
+
+    nav {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+    }
+
+    #h1-nav {
+        margin: 0;
+        font-family: "Montserrat";
+        font-weight: 700;
+        font-size: 1.5rem;
+        line-height: 29.26px;
+        letter-spacing: 0%;
+        text-align: center;
+    }
 
     .containerflex-do-grid {
         padding-top: 5%;
