--- a/public/styles.css
+++ b/public/styles.css
@@ -648,6 +648,10 @@ footer {
         
     }
 
+    .h1-posts > h1 {
+        font-size: 1.2rem;
+    }
+
     .container-pop {
         display: flex;
         justify-content: center;
